============================
bzr-fastimport Release Notes
============================

.. contents::

0.11 UNRELEASED

Bug fixes
---------

* Fix internal error in 'bzr fast-import-info'. (Jelmer Vernooij, #730833)

* Setup.py no longer relies on bzrlib. (Jelmer Vernooij, #735201)

0.10 08-Mar-2011

Changes
-------

* bzr-fastimport's file parsing and generation functionality has been exported into
  separate upstream project called python-fastimport, that it now depends on.
  python-fastimport can be retrieved from http://launchpad.net/python-fastimport.

Bug fixes
---------

* Cope with non-ascii characters in tag names. (Jelmer Vernooij, #598060)

* Cope with non-ascii characters in symbolic links. (Daniel Clemente,
   Jelmer Vernooij, #238365)

* In plain mode, don't export multiple authors. (David Kilzer, #496677)

* Fix indentation when starting p4 fails. (Jelmer Vernooij)

* SOURCE argument to bzr fast-import-filter is now optional, consistent with
  examples. (Jelmer Vernooij, #477861)

* Support new marks file format introduced in (apparently) git 1.6.
  (Ian Clatworthy, Jelmer Vernooij, Gabriel Filion, #347729)

* Allow entries without email address in user map. (Jelmer Vernooij, #576598)

* Strip leading slashes when exporting Subversion repositories.
  (Jelmer Vernooij, #477869)

* Cope with non-utf8 characters in commit messages. (Jelmer Vernooij, #444896)

* Include download_url in setup.py for use on pypi. (Jelmer Vernooij, #456957)

* Fix incremental imports from incremental import streams.
  (termie, Jelmer Vernooij, #328494)

0.9 28-Feb-2010
===============

New Features
------------

* The fast-import command now takes an optional but recommended
  DESTINATION argument. A repository will be created at this
  location and branches will be created within there. If the user
  is running bzr 1.17 up to 2.0, format "2a" is used for these,
  otherwise the default format is used. A format can be explicitly